# safediff

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: output_sample.txt
examples/: make_demo_ckpt.py  output_sample.txt
src/safediff/: __init__.py  __main__.py  analyzer.py  audit.py  cli.py  dead_neuron.py  demo.py  integrations.py  loader.py  quant.py  track.py  visualizer.py
tests/: test_analyzer.py  test_audit.py  test_dead_neuron.py  test_integrations.py  test_loader.py  test_quant.py  test_track.py  test_visualizer.py
